--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,23 @@
 Package: NDSWorkshop
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Functions for use in the Introduction to NDS workshop
 Version: 0.1.0
 Authors@R: c(
     person(
-      "Jane", "Doe",
-      email = "jane@example.com",
+      "Barney", "Ricca",
+      email = "barneyricca@gmail.com",
       role = c("aut", "cre")
     )
   )
-Description: More about what it does (maybe more than one line).
-    Continuation lines should be indented.
-License: What license is it under?
+Description: Several functions that make the analysis of nonlinear time series
+    data are included here.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.2
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    lme4,
+    Matrix
