--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,3 +21,5 @@ Config/testthat/edition: 3
 Imports: 
     lme4,
     Matrix
+URL: https://github.com/barneyricca/NDSWorkshop
+BugReports: https://github.com/barneyricca/NDSWorkshop/issues
